--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "webpack-parallel-uglify-plugin": "^1.0.2"
   }
 }
